# ringlink

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
clients/browser/: .gitkeep  contract-check.js  index.html  package.json  ringlink-client.js
clients/pygame/: .gitkeep
docs/: latency-budget.md  spike-b-browser-client.md
protocol/: PROTOCOL.md
server/ringlink_server/: __init__.py  __main__.py  channel.py  cook.py  hid_driver.py  latency.py  leg.py  lifecycle.py  pipeline.py  record.py  server.py  transport.py
tests/: test_calibrate.py  test_channel.py  test_cook.py  test_driver.py  test_latency.py  test_leg.py  test_lifecycle.py  test_pipeline.py  test_server.py  test_smoke.py
tests/fixtures/: raw_report_samples.json
traces/: .gitkeep  left-pad.jsonl  right-pad.jsonl
