[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ringlink-server"
version = "0.0.1"
description = "Reference server for the ringlink protocol — Nintendo Ring Fit hardware as a low-latency, language-neutral PC input source."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "tommygents" }]
dependencies = [
    # cython-hidapi: prebuilt wheels bundle the native lib (no compiler/brew/DLL).
    # MUST be `hidapi`, NOT apmorton `hid` — they collide on the `hid` import name.
    # See the project gotcha: gotcha_joycon_hid_from_python.
    "hidapi==0.15.0",
    "websockets>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ringlink-server = "ringlink_server.__main__:main"

# src-style layout: the importable package lives under server/ (the spec's L1–L4).
[tool.setuptools]
package-dir = { "" = "server" }

[tool.setuptools.packages.find]
where = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
